added CSS for containers

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container-fluid">
+    <div class="flexbox container-fluid">
   <!-- Timer Section -->
   <div class="header time">
     <div class='headerLeft'>Time Remaining:</div><t/>
