added more styling

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Code Quiz!</title>
 </head>
 <body>
     <div class="flexbox container-fluid">
@@ -35,8 +35,8 @@
   <!-- Submit Score  -->
   <div id="div_submitScore" class="form-group">
     <label for="initial_input">Enter Your Initials</label>
-    <input class="form-control" id="initials" placeholder="A.A.">
-    <button type="button" id="submit_initials">Submit</button>
+    <input class="form-control" id="initials" placeholder="A.A."><br>
+    <button type="button" id="submit_initials" class="btn btn-large btn-light">Submit</button>
   </div>
     <!-- Highscore Table -->
   <div id="div_highscoreTable" class="container" style="display: none;">
